snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.0-SNAPSHOT/maven-metadata.xml.sha256
01d3aa37258d7d2cff690e5287be82085099f72471c7f5278cb479c258676b24